# mytorch

./: .gitignore  README.md  选题报告.md
cpu/: CMakeLists.txt  flash_text.md  luotest.md  readme.md  readme2.md
cpu/examples/: cnn_test.cpp  luotest.cpp  main.cpp  mnist_test.cpp
cpu/include/core/: function.h  tensor.h
cpu/include/nn/: linear.h  module.h  module2.h
cpu/include/optim/: sgd.h
cpu/include/rand/: rand.h
cpu/src/core/: function.cpp  tensor.cpp
cpu/src/nn/: conv.cpp  flash-attn.cpp  flash-attn.py  flash_attn.py  flatten.cpp  linear.cpp  pool.cpp
cpu/src/optim/: sgd.cpp
docs/: attention.md  final report.md  选题报告v1.md
gpu/: CMakeLists.txt
gpu/examples/: cnn_test.cpp  main.cpp  mnist_test.cpp
gpu/include/core/: function.h  tensor.h
gpu/include/loader/: mnist_loader.h
gpu/include/nn/: activations.h  conv.h  flatten.h  linear.h  module.h  module2.h  pool.h  sequential.h
gpu/src/core/: function.cpp  function.cu  tensor.cpp  tensor.cu
gpu/src/nn/: activations.cpp  conv.cpp  flash-attention.cpp  flash-attention.py  flatten.cpp  linear.cpp  sequential.cpp
gpu/src/optim/: sgd.cpp
gpu2/: CMakeLists.txt
gpu2/examples/: cnn_test.cpp  linear_test_gpu.cpp  mnist.cpp  mnist_test.cpp
gpu2/include/core/: function.h  tensor.h
gpu2/include/loader/: mnist_loader.h
gpu2/include/nn/: activations.h  conv.h  flatten.h  linear.h  module.h  pool.h  sequential.h
gpu2/src/core/: function.cpp  function.cu  tensor.cpp  tensor.cu
gpu2/src/nn/: activations.cpp  conv.cpp  flatten.cpp  linear.cpp  pool.cpp  sequential.cpp
gpu2/src/optim/: sgd.cpp
omp/: CMakeLists.txt  requirements.txt
omp/examples/: cnn.cpp  cnn_test.cpp  linear_test.cpp  mnist.cpp  mnist_test.cpp
omp/include/core/: function.h  tensor.h
omp/include/loader/: mnist_loader.h
omp/include/nn/: activations.h  conv.h  flash-attn.h  flatten.h  module.h  pool.h  sequential.h
omp/include/optim/: sgd.h
omp/include/rand/: rand.h
omp/src/core/: function.cpp  tensor.cpp
omp/src/nn/: conv.cpp  flatten.cpp  pool.cpp  sequential.cpp
omp/src/optim/: sgd.cpp
